# AdventOfCode2025

./: .gitignore  CMakeLists.txt
01/: advent01_1.c  advent01_2.c
02/: advent02_1.c
02/python/: Advent02.py
03/: advent03_1.c  advent03_2.c
04/: advent04_1.c  advent04_2.c
